--- a/index_list.html
+++ b/index_list.html
@@ -2,21 +2,16 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exo 126 - JQuery Array objects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div id="toggle"></div>
     <div id="content">
-        <div id="avatar">
-            <div>
-                <img id='img'>
-                <p id="nom"></p>
-            </div>
-        </div>
-        <button id="prev">Précédent</button>
-        <button id="next">Suivant</button>
+    	<div id="avatar"></div>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
